--- a/app/src/main/res/layout/titres_activity.xml
+++ b/app/src/main/res/layout/titres_activity.xml
@@ -21,8 +21,8 @@
 
         <TextView
             android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="95dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Score: 10392"
             android:textAlignment="center"
@@ -44,7 +44,7 @@
         <TextView
             android:id="@+id/button7"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="00:00:00"
             android:textAlignment="center"
@@ -68,7 +68,7 @@
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="#00F8FD"
             android:text="gauche" />
@@ -76,7 +76,7 @@
         <Button
             android:id="@+id/button"
             android:layout_width="151dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="#FE9D10"
             android:text="tourner" />
@@ -84,7 +84,7 @@
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="#FD4A6D"
             android:text="droite" />
