--- a/app/src/main/res/layout/difficulty_activity.xml
+++ b/app/src/main/res/layout/difficulty_activity.xml
@@ -104,7 +104,10 @@
         android:layout_marginStart="150dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="30dp"
+        android:backgroundTint="#FF00FF"
+        android:fontFamily="@font/alfa_slab_one"
         android:text="Son"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
