--- a/app/src/main/res/layout/titres_activity.xml
+++ b/app/src/main/res/layout/titres_activity.xml
@@ -23,19 +23,21 @@
             android:id="@+id/button5"
             android:layout_width="105dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
             android:fontFamily="@font/alfa_slab_one"
             android:text="Score: 10392"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#6DF550"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="4dp"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
             android:height="5dp"
             android:backgroundTint="#FE9D10"
@@ -46,6 +48,7 @@
             android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
             android:fontFamily="@font/alfa_slab_one"
             android:text="00:00:00"
@@ -69,25 +72,28 @@
 
         <ImageButton
             android:id="@+id/button2"
-            android:layout_width="117dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_weight="1"
+            android:layout_gravity="center"
             android:background="@drawable/arrow_left"
             android:backgroundTint="#00F8FD" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="186dp"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
             android:backgroundTint="#FE9D10"
             android:text="tourner" />
 
         <ImageButton
             android:id="@+id/button3"
-            android:layout_width="117dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_weight="1"
+            android:layout_gravity="center"
             android:background="@drawable/arrow_right"
             android:backgroundTint="#FD4A6D" />
     </LinearLayout>
