--- a/app/src/main/res/layout/difficulty_activity.xml
+++ b/app/src/main/res/layout/difficulty_activity.xml
@@ -104,7 +104,7 @@
         android:layout_marginStart="150dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="30dp"
-        android:backgroundTint="#FF00FF"
+        android:backgroundTint="#FFEE00"
         android:fontFamily="@font/alfa_slab_one"
         android:text="Son"
         android:textStyle="bold"
